--- a/semana7/AgendaDeContatos/src/main/resources/application.properties
+++ b/semana7/AgendaDeContatos/src/main/resources/application.properties
@@ -1,9 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=admin
-spring.datasource.password=admin
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+#
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:postgresql://database-1.***.us-east-1.rds.amazonaws.com:5432/db_anderson?currentSchema=agenda 
+spring.datasource.username=***
+spring.datasource.password=***
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
