--- a/semana7/AgendaDeContatos/src/main/resources/application.properties
+++ b/semana7/AgendaDeContatos/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
-spring.datasource.url=jdbc:postgresql://database-1.***.us-east-1.rds.amazonaws.com:5432/db_anderson?currentSchema=agenda 
-spring.datasource.username=***
-spring.datasource.password=***
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=agenda 
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
